Background and Font Updated

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,12 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
-
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <script src="lib/codemirror.js"></script>
   <link rel="stylesheet" href="lib/codemirror.css">
   <script src="mode/javascript/javascript.js"></script>
   
-  <title>Snippet Notes</title>
+  <title>BitHub</title>
 </head>
 
 <body>
